--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -107,7 +107,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 ::: {.w-50-ns .tc}
 
-[Log in to JupyterHub](https://jupyterhub.validmind.ai/){.button target="_blank"}
+[Log in to JupyterHub]({{< var url.jupyterhub >}}/){.button target="_blank"}
 
 :::
 
