--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -112,7 +112,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 ::: {.w-50-ns .tc}
 
-[Log in to JupyterHub](https://jupyterhub.validmind.ai/){.button target="_blank"}
+[Log in to JupyterHub]({{< var url.jupyterhub >}}/){.button target="_blank"}
 
 :::
 
@@ -249,7 +249,7 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 ::: {.f6}
 With your code snippet copied to your clipboard:
 
-1. Open **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
+1. Open **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the **Setting up** section.
 
 :::
@@ -266,7 +266,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f6}
 Next, let's import the champion model submitted by the model development team in the format of a `.pkl` file for evaluation:
 
-1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
+1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run the cell under the **Import the champion model** section.
 
 :::
@@ -321,7 +321,7 @@ We're curious how an alternate model compares to our champion model, so let's tr
 ::: {.f6}
 Let's train our potential challenger model:
 
-1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
+1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run the cell under the following Training a potential challenger model section: **Random forest classification model**
 
 :::
@@ -338,7 +338,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f6}
 In addition to the initialized datasets, you'll also need to initialize a ValidMind model object (`vm_model`) that can be passed to other functions for analysis and tests on the data for each of our two models using [the `vm.init_model()` method](/validmind/validmind.qmd#init_model){target="_blank"}:
 
-1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
+1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the section **Initializing the model objects**.
 
 :::
@@ -395,7 +395,7 @@ Finally, we want to verify the relative influence of different input features on
 ::: {.f6}
 Use the [`list_tests()` function](/validmind/validmind/tests.qmd#list_tests){target="_blank"} to identify all the model performance tests for classification:
 
-1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
+1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the Running model evaluation tests section: **Run model performance tests**
 
 :::
@@ -484,7 +484,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 ::: {.f6}
 This time, use `list_tests()` to identify all the model diagnosis tests for classification:
 
-1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
+1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the Running model evaluation tests section: **Run diagnostic tests**
 
 :::
@@ -501,7 +501,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f6}
 Use `list_tests()` again to identify all the feature importance tests for classification:
 
-1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
+1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the Running model evaluation tests section: **Run feature importance tests**
 
 :::
@@ -572,7 +572,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 ::: {.f6}
 With your code snippet copied to your clipboard:
 
-1. Open **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
+1. Open **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
 2. Run all the cells under the **Setting up** section.
 
 :::
@@ -610,7 +610,7 @@ Let's implement a *custom test* that calculates a confusion matrix:
 ::: {.f6}
 An *inline test* refers to a test written and executed within the same environment as the code being tested — <br>in the following example, right in our Jupyter Notebook —  without requiring a separate test file or framework:
 
-1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
+1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
 2. Run all the cells in the following sections under Implementing custom tests: **Implement a custom inline test**
 
 :::
@@ -627,7 +627,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f6}
 Sometimes you may want to reuse the same set of custom tests across multiple models and share them with others in your organization, <br>like the model development team would have done with you in this example workflow featured in this series of notebooks:
 
-1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
+1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
 2. Run all the cells in the following sections under Implementing custom tests: **Use external test providers**
 
 :::
@@ -646,7 +646,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f6}
 Our final task is to verify that all the tests provided by the model development team were run and reported accurately:
 
-1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
+1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
 2. Run all the cells under the **Verify test runs** section.
 
 :::
