--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -79,7 +79,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 ::: {.w-50-ns .tc}
 
-[Log in to JupyterHub](https://jupyterhub.validmind.ai/){.button target="_blank"}
+[Log in to JupyterHub]({{< var url.jupyterhub >}}/){.button target="_blank"}
 
 :::
 
@@ -237,7 +237,7 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 ::: {.f6}
 With your code snippet copied to your clipboard:
 
-1. Open **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+1. Open **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run the cell under the **Setting up** section.
 
 :::
@@ -254,7 +254,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f6}
 After you've successfully initialized the {{< var validmind.developer >}}, let's import the sample dataset that was used to develop the dummy champion model:
 
-1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run the cell under the **Load the sample dataset** section.
 
 :::
@@ -271,7 +271,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f6}
 Next, we'll use the [`list_tests()` function](/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.ipynb#explore-available-tests){target="_blank"} to pinpoint tests we want to run:
 
-1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run all the cells under the Verifying data quality adjustments section: **Identify qualitative tests**
 
 :::
@@ -287,7 +287,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f6}
 Then, we'll use the [`init_dataset()` function](/validmind/validmind.qmd#init_dataset){target="_blank"} to connect the sample data with a {{< var vm.product >}} `Dataset` object in preparation for running tests:
 
-1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run the following cell in the  Verifying data quality adjustments section: **Initialize the {{< var vm.product >}} datasets**
 
 :::
@@ -309,7 +309,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f6}
 You run individual tests by calling the [`run_test()` function](/validmind/validmind/tests.qmd#run_test){target="_blank"} provided by the `validmind.tests` module:
 
-1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run all the cells under the Verifying data quality adjustments section: **Run data quality tests**
 
 :::
@@ -326,7 +326,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f6}
 You can utilize the output from a ValidMind test for further use, for example, if you want to remove highly correlated features:
 
-1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run all the cells under the Verifying data quality adjustments section: **Remove highly correlated features**
 
 :::
@@ -371,7 +371,7 @@ Every test result returned by the `run_test()` function has a `.log()` method th
 ::: {.f6}
 You can leverage the {{< var validmind.developer >}} to easily run comparison tests, between both datasets and models. Here, we compare the original raw dataset and the final preprocessed dataset, then log the results to the {{< var validmind.platform >}}:
 
-1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run all the cells under the Documenting test results section: **Configure and run comparison tests**
 :::
 
@@ -387,7 +387,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f6}
 When running individual tests, you can use a custom `result_id` to tag the individual result with a unique identifier:
 
-1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run the cell under the following Documenting test results section:  **Log tests with unique identifiers**.
 
 :::
@@ -474,7 +474,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 ::: {.f6}
 So far, we've rebalanced our raw dataset and used the results of {{< var vm.product >}} tests to additionally remove highly correlated features from our dataset. Next, let's now spilt our dataset into train and test in preparation for model evaluation testing:
 
-1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run all the cells under the **Split the preprocessed dataset** section.
 
 :::
